<resources>
    <string name="app_name">MeetApp</string>

    <string name="default_notification_channel_id" translatable="false">com.example.meetapp</string>

    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="groups">Groups</string>
    <string name="settings">Settings</string>
    <string name="choose_image">Choose Image</string>
    <string name="group_name">Group Name</string>
    <string name="group_s_subject">Group\'s Subject</string>
    <string name="create_group">Create Group</string>
    <string name="create">Create</string>
    <string name="join">Join</string>
    <string name="type_locations_or_subjects">Search Locations</string>
    <string name="type_a_message_hint">Type A Message</string>
    <string name="next_meeting">Next Meeting</string>
    <string name="login_field">Login</string>ֺ
    <string name="email_field">Email</string>
    <string name="password_field" translatable="true">Password</string>
    <string name="sign_up_invite" translatable="true">New Here? Click Here To Sign Up</string>
    <string name="confirm_password_field" translatable="true">Confirm Password</string>
    <string name="display_name_field" translatable="true">Display Name</string>
    <string name="create_account" translatable="true">Create Account</string>
    <string name="no_messages_alert" translatable="true">There is no messages</string>
    <string name="create_a_meeting" translatable="true">Create a Meeting</string>
    <string name="meeting_type_group" translatable="true">Group Meeting</string>
    <string name="meeting_type_public" translatable="true">Public Meeting</string>
    <string name="meeting_subject_field" translatable="true">Meeting Subject</string>
    <string name="is_public_switch" translatable="true">Is Public</string>
    <string name="waiting_requests" translatable="true">Waiting Requests</string>
    <string name="request_succeed_message" translatable="true">Your Request Has Sent!</string>
    <string name="time_and_date_field" translatable="true">Time And Date</string>
    <string name="choose_time_field" translatable="true">Choose Time</string>
    <string name="no_location_message" translatable="true">No Location Has Been Selected</string>
    <string name="choose_location_field" translatable="true">Choose Location</string>
    <string name="location" translatable="true">Location</string>
    <string name="description">Description(Optional)</string>
    <string name="my_groups_header">My Groups</string>
    <string name="meetings">Meetings</string>
    <string name="my_chats_header">My Chats</string>
    <string name="more_info">More Info</string>
    <string name="group_s_description">Group Description</string>
    <string name="group_subject">Group Subject</string>
    <string name="confirm_arrival">Im Coming</string>
    <string name="no_date_message">No Date Has Been Selected</string>
    <string name="no_meetings_alert">You Have No Meetings On This Date</string>
    <string name="chats">Chat</string>
    <string name="invalid_inputs">Email Or Password Are Invalid</string>
    <string name="auth_failed_message">Authentication failed, Try Again</string>
    <string name="display_name_error">Please Choose A Display Name</string>
    <string name="invalid_email_message">Invalid Email Address</string>
    <string name="short_password_message">A Password Needs To Contained At Least 6 Characters</string>
    <string name="not_same_password_message">Passwords Are Not Identical</string>
    <string name="create_group_message">Creating , Please Wait..</string>
    <string name="upload_error">Photo Wont Upload… /n Try Again Later</string>
    
    <string name="menu_option_leave_group">Leave Group</string>
    <string name="menu_option_set_manager">Set As Manager</string>
    <string name="menu_option_remove_from_group">Remove From Group</string>
    <string name="menu_option_view_profile">View Profile</string>

    <string name="days_sunday">SUN</string>
    <string name="days_monday">MON</string>
    <string name="days_tuesday">TUE</string>
    <string name="days_wednesday">WED</string>
    <string name="days_thursday">THU</string>
    <string name="days_friday">FRI</string>
    <string name="days_saturday">SAT</string>

    <string name="months_january">January</string>
    <string name="months_february">February</string>
    <string name="months_march">March</string>
    <string name="months_april">April</string>
    <string name="months_may">May</string>
    <string name="months_june">June</string>
    <string name="months_july">July</string>
    <string name="months_august">August</string>
    <string name="months_september">September</string>
    <string name="months_october">October</string>
    <string name="months_november">November</string>
    <string name="months_december">December</string>
    <string name="members">Members</string>

    <string name="meeting_remainder">A Little Reminder For A Meeting You Have Today At </string>
    <string name="group_meeting_remainder">A Little Reminder For A Group Meeting You Have Today At </string>
    <string name="is_public">Is Public?</string>
    <string name="user_is_coming">Im Not Coming</string>
    <string name="user_is_not_coming">Im Not Coming</string>

    <string name="profile_settings">Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="logout">Logout</string>

    <string name="upload_options">Upload Pictures Option</string>
    <string name="select_upload_method">How do you want to set your picture?</string>
    <string name="option_gallery">Gallery</string>
    <string name="option_camera">Camera</string>
    <string name="preferences">Preferences</string>
    <string name="dark_mode">Dark Mode</string>


</resources>