<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/main_app_design"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_group_civ"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="16dp"
        app:civ_border_width="0.2dp"
        android:src="@color/background" />

    <LinearLayout
        android:layout_marginTop="5dp"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/group_name"
            android:textColor="@color/oppBackground"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/edit_group_group_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:inputType="textPersonName"
            android:background="@drawable/main_app_design"
            android:text=""
            android:textColor="@color/oppBackground"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="5dp"
            android:text="@string/group_s_description"
            android:textColor="@color/oppBackground"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edit_group_group_description"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingVertical="5dp"
            android:background="@drawable/main_app_design"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:textColor="@color/oppBackground"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>