<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.myGroups.CreateGroupFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/create_group_civ"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:src="@color/background"
        app:civ_border_color="@color/oppBackground"
        app:civ_border_width="0.2dp"
        app:layout_constraintEnd_toStartOf="@+id/create_group_choose_img_button"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_group_choose_img_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/main_app_design"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/choose_image"
        app:layout_constraintBottom_toBottomOf="@+id/create_group_civ"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/create_group_civ"
        app:layout_constraintTop_toTopOf="@+id/create_group_civ" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_group_civ">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/group_name"
                android:textColor="@color/oppBackground"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/create_group_group_name_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_app_design"
                android:text=""
                android:textColor="@color/oppBackground"
                android:textSize="23sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/group_s_subject"
                android:textColor="@color/oppBackground"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/create_group_group_subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/main_app_design"
                android:text=""
                android:textColor="@color/oppBackground"
                android:textSize="23sp" />
        </LinearLayout>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/create_group_public_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/is_public"
            android:textColor="@color/oppBackground"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/create_group_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/main_app_design"
        android:backgroundTint="@color/oppBackground"
        android:paddingHorizontal="50dp"
        android:text="@string/create_group"
        android:textColor="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>