<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/group_header_greadient"
    tools:context=".ui.login.LoginFragment">


    <EditText
        android:id="@+id/login_editTextTextEmailAddress"
        android:layout_width="270dp"
        android:layout_height="40dp"
        android:textColor="@color/oppBackground"
        android:background="@drawable/main_app_design"
        android:drawableStart="@drawable/ic_baseline_alternate_email_24"
        android:drawableTint="@color/oppBackground"
        android:ems="10"
        android:hint="@string/email_field"
        android:inputType="textEmailAddress"
        android:padding="6dp"
        android:textColorHint="@color/oppBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <EditText
        android:id="@+id/login_editTextTextPassword"
        android:textColor="@color/oppBackground"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/main_app_design"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableTint="@color/oppBackground"
        android:ems="10"
        android:hint="@string/password_field"
        android:inputType="textPassword"
        android:padding="6dp"
        android:textColorHint="@color/oppBackground"
        app:layout_constraintEnd_toEndOf="@+id/login_editTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/login_editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/login_editTextTextEmailAddress" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="100dp"
        android:textColor="#000000"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/main_app_design"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/login_field"
        app:layout_constraintEnd_toEndOf="@+id/login_editTextTextPassword"
        app:layout_constraintStart_toStartOf="@+id/login_editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/login_editTextTextPassword" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageView2"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintBottom_toTopOf="@+id/login_editTextTextEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>